# mimic

./: Cargo.toml  README.md  build.rs  foo.rs  imgui.ini
mimic/: Cargo.toml  build.rs
mimic/src/: cartridge.rs  emulator.rs  int_utils.rs  interruptable.rs  main.rs  main_window.rs  tickable.rs  utils.rs
mimic/src/cpu/: alu.rs  cpu.rs  disassembler.rs  instructions.rs  interrupts.rs  mod.rs  registers.rs
mimic/src/debugger/: code_debugger.rs  colours.rs  mod.rs  tile_debug_view.rs  tile_map_debug_view.rs
mimic/src/gpu/: gpu.rs  lcd.rs  mod.rs  palette.rs
mimic/src/io/: audio.rs  keypad.rs  lcd_view.rs  mod.rs  serial.rs  timer.rs
mimic/src/memory/: memory.rs  mmu.rs  mod.rs  test_memory.rs
mimic/src/memory/mbc/: mbc0.rs  mbc1.rs  mod.rs
opgen/: Cargo.toml  README.md
opgen-test/: Cargo.toml
opgen-test/src/: main.rs
opgen/encoding/: lr35902.yml  sm83.yml
opgen/src/: errors.rs  generator.rs  lib.rs  op.rs  parser.rs  test.rs
