[package]
name = "mimic"
version.workspace = true
edition = "2021"

[profile.release]
debug = 1

[build-dependencies]
opgen = { path = "../opgen" }

[dependencies]
bitflags = "1"
num-traits = "0.2"
glium = { version = "0.32.1", default-features = true }
imgui = { version="0.11.0", features = ["tables-api"] }
imgui-winit-support = "0.11.0"
imgui-glium-renderer = "0.11.0"
