[package]
name = "mimic"
version.workspace = true
edition = "2021"

[build-dependencies]
opgen = { path = "../opgen" }

[dependencies]
bitflags = "1"
num-traits = "0.2"
clap = { version = "4.0.19", features = ["derive"] }
glium = { version = "0.32.1", default-features = true }
imgui = { version="0.11.0", features = ["tables-api"] }
imgui-winit-support = "0.11.0"
imgui-glium-renderer = "0.11.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
