[package]
name = "opgen"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
evalexpr = "11.3"

[features]
default = ["rustfmt"]
rustfmt = []
